--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ const base = import.meta.env.PUBLIC_BASE_URL;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/png" href={`${base}icon.png`} />
+    <link rel="icon" type="image/png" href={`${base}/icon.png`} />
     <meta name="generator" content={Astro.generator} />
     <title>xianii</title>
   </head>
