--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,10 @@
 ---
 import Pages from '../layouts/Pages.astro';
 import IndexContent from '../components/IndexContent.svelte';
-
-const base = import.meta.env.PUBLIC_BASE_URL;
 ---
 
 <Pages>
   <div class="min-h-screen flex items-center justify-center">
-    <IndexContent {base} client:load />
+    <IndexContent client:load />
   </div>
 </Pages>
